finished up contact form

--- a/html5up-dimension/index.html
+++ b/html5up-dimension/index.html
@@ -46,14 +46,14 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/night-desert.jpg" alt="" /></span>
-								<p>I am an aspiring Full Stack Web Developer, who is attending <a href ="https://lambdaschool.com/hire">Lambda School</a>. I decided to learn programming because I wanted an evolving career that was sustainable and would allow me to create a future for my children. I currently reside in the South West, where we have gorgeous sunsets and plenty of cacti to go around.  By the way, check out my <a href="#work">awesome work</a>.</p>
+								<p>I am an aspiring Full Stack Web Developer, who is attending <a href ="https://lambdaschool.com/hire">Lambda School</a>. I decided to learn programming because I wanted an evolving career that was sustainable and would allow me to create a future for my children. I currently reside in the South West, where we have gorgeous sunsets and plenty of cacti to go around.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/cacti.jpg" alt="" /></span>
-								<p>Attending Lambda School, you work on a variety of projects while expanding your skill set, while working with your fellow students and instructors. Thus far we have gone through <a href="https://github.com/ShadowRae/Sprint-Challenge--User-Interface">HTML, CSS and Git</a> as well as <a href="https://github.com/ShadowRae/responsive-web-design-I">Responsive Design</a>.</p>
+								<p>Attending Lambda School, you work on a variety of projects while expanding your skill set, while working with your fellow students and instructors. Thus far we have gone through <a href="https://github.com/ShadowRae/Sprint-Challenge--User-Interface">HTML, CSS and Git</a> as well as <a href="https://github.com/ShadowRae/responsive-web-design-I">Responsive Design</a>.<br>You can find more of my work <a href="https://github.com/Rae-Glazier">here</a>.</br></p>
 							</article>
 
 						<!-- About -->
@@ -66,7 +66,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="mailto:glazier.home.life@gmail.com" enctype="text/plain">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
